config and index documents are edited

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-merlot
+
+title: Suleyman Turancan Burucu Progress Journal
+description: IE 360 - Fall 2020 - Bogazici University
